<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profil"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/nav_profile"></item>

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/nav_settings"></item>

        <item
            android:id="@+id/nav_impressum"
            android:icon="@drawable/ic_impresum_24dp"
            android:title="@string/nav_impressum"></item>


    </group>

    <item android:title="">

        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_icons8_sign_out_filled_50"
                android:title="@string/nav_logout"></item>
        </menu>

    </item>
</menu>